--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ python:
 # command to install dependencies
 install: 
   - pip install -r requirements.txt
+  - pip install contextlib2
 # Command to run tests
 script: python tests/ssh_config_test.py
