--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ python:
   - "3.7"
 # command to install dependencies
 install: 
-  - pip install -r requirements.txt
-  - pip install contextlib2
+  - pip install -r test-requirements.txt
 # Command to run tests
 script: python tests/ssh_config_test.py
