--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Build and publish to Test PyPI
+    - name: Build
+      run: |
+        python setup.py sdist bdist_wheel
+    - name: Publish to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
