--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+    - name: Install dependecies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install setuptools
     - name: Build
       run: |
         python setup.py sdist bdist_wheel
