--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependecies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install setuptools
+        python -m pip install setuptools wheel
     - name: Build
       run: |
         python setup.py sdist bdist_wheel
